Index raíz actualizado con RA6

--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        table,
+        th,
+        td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            padding: 10px;
+        }
+    </style>
 </head>
+
 <body>
-    <a href="RA3/index1.html">Ejercicio 3-1</a>
+    <h1>Alejandro Martínez Bravo</h1>
+    <table>
+        <tr>
+            <th>RA1</th>
+            <th>RA2</th>
+            <th>RA3</th>
+            <th>RA6</th>
+
+        </tr>
+        <tr>
+            <td><a href="RA1/Tarea_RA1.html">Tarea RA1</a></td>
+            <td><a href="RA2/ej1.html">Ejercicio 1 RA2</a></td>
+            <td><a href="RA3/index1.html">Ejercicio 1 RA3</a></td>
+            <td><a href="RA6/Tarea ut5_1/noticias.htm">Ejercicio 1 RA6</a></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><a href="RA2/ej2.html">Ejercicio 2 RA2</a></td>
+            <td><a href="RA3/index2.html">Ejercicio 2 RA3</a></td>
+            <td><a href="RA6/Tarea ut5_2/ejercicio2.htm">Ejercicio 2 RA6</a></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><a href="RA2/ej3.html">Ejercicio 3 RA2</a></td>
+            <td><a href="RA3/index3.html">Ejercicio 3 RA3</a></td>
+            <td><a href="RA6/Tarea ut5_3/ejercicio3.html">Ejercicio 3 RA6</a></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><a href="RA2/ej4.html">Ejercicio 4 RA2</a></td>
+            <td><a href="RA3/index4.html">Ejercicio 4 RA3</a></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><a href="RA2/ej5.html">Ejercicio 5 RA2</a></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
 </body>
+
 </html>
