nuevo boton volver

--- a/RA2/ej1.html
+++ b/RA2/ej1.html
@@ -21,6 +21,7 @@
             document.write("Error: la edad introducida no es un número válido.");
         }
     </script>
+    <script src="../paginacion.js"></script>
 </body>
 
 </html>
