--- a/RA2/ej2.html
+++ b/RA2/ej2.html
@@ -21,6 +21,7 @@
             document.write("Error: todos los valores deben ser números.");
         }
     </script>
+    <script src="../paginacion.js"></script>
 </body>
 
 </html>
