--- a/RA2/ej3.html
+++ b/RA2/ej3.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 3 RA2</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ejercicio 3 RA2</title>
 </head>
+
 <body>
-    <h2>Suma de números del 1 al N</h2>
+  <h2>Suma de números del 1 al N</h2>
   <script>
     const num = parseInt(prompt("Introduce un número:"));
 
@@ -20,5 +22,7 @@
       document.write(`La suma de los números del 1 al ${num} es ${suma}.`);
     }
   </script>
+  <script src="../paginacion.js"></script>
 </body>
+
 </html>
