--- a/RA2/ej4.html
+++ b/RA2/ej4.html
@@ -25,5 +25,6 @@
     document.write(`Total acumulado: ${suma.toFixed(2)}<br>`);
     document.write(`Cantidad de números introducidos: ${contador}`);
   </script>
+  <script src="../paginacion.js"></script>
 </body>
 </html>
