--- a/RA3/index1.html
+++ b/RA3/index1.html
@@ -10,5 +10,6 @@
     <button id="abrirVentana">Abrir ventana</button>
 
     <script src="ej1.js"></script>
+    <script src="../paginacion.js"></script>
 </body>
 </html>
