--- a/RA6/Tarea ut5_2/ejercicio2.htm
+++ b/RA6/Tarea ut5_2/ejercicio2.htm
@@ -10,6 +10,7 @@
 </head>
 <body>
 
-    <script src="./ejercicio2.js"></script>    
+    <script src="./ejercicio2.js"></script>
+    <script src="../../paginacion.js"></script>
 </body>
 </html>
