--- a/RA3/index3.html
+++ b/RA3/index3.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Ejercicio 3 - Contador de Clicks</title>
   <script src="ej3.js" defer></script>
 </head>
+
 <body>
   <h1>Contador persistente</h1>
 
   <button id="btnContar">Hacer Click</button>
   <p>Clicks acumulados: <span id="contador"></span></p>
+
+  <script src="../paginacion.js"></script>
 </body>
+
 </html>
