--- a/RA3/index4.html
+++ b/RA3/index4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>Ejercicio 4 - Redirección</title>
@@ -11,7 +12,10 @@
     }
   </script>
 </head>
+
 <body>
   <h1>Serás redirigido en 3 segundos...</h1>
+  <script src="../paginacion.js"></script>
 </body>
+
 </html>
