--- a/RA6/Tarea ut5_1/noticias.htm
+++ b/RA6/Tarea ut5_1/noticias.htm
@@ -83,6 +83,7 @@
     <footer id="pie"></footer>
     <script src='ejercicio1.js'></script>
 
+    <script src="../../paginacion.js"></script>
 </body>
 
 </html>
